Thay đổi một số thứ trong betting system và 1 số thay đổi nhỏ khác